Fix desktop scrollbar opening bug by making newly-positioned (in mobile branch) `app-container` full-height

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -167,6 +167,7 @@ a:active {
 
 #app-container {
 	position: relative;
+	height: 100%;
 }
 
 #header .dropdown,
